--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
-<header>
+<!-- <header>
     <h1><a href='{{ site.url }}/'>{{ site.name }}</a></h1>
-</header>
-<a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/about/'>About </a> | <a href='{{ site.url }}/contact/'> Contacts</a> | <a href='{{ site.url }}/archive/'> Archive</a> 
+</header> -->
+<!-- <a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/about/'>About </a> | <a href='{{ site.url }}/contact/'> Contacts</a> | <a href='{{ site.url }}/archive/'> Archive</a>  -->
+<a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/archive/'> Archive</a>
 <hr>
