--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}{{ page.shortUrl }}</h1>
-<div class='separator'></div>
+<h2>{{ page.title }}{{ page.shortUrl }}</h2>
+<!-- <div class='separator'></div> -->
         
 {{ content }}
         
