--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}{{ page.shortUrl }}</h2>
-<!-- <div class='separator'></div> -->
+<h3>{{ page.title }}{{ page.shortUrl }}</h3>
+<div class='separator'></div>
         
 {{ content }}
         
