--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,10 @@ layout: default
 ---
 <h1>{{ page.title }}{{ page.shortUrl }}</h1>
 <div class='separator'></div>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">{{ content }}</script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">{{ content }}</script> -->
         
+{{ content }}
+
 {% if site.disqus-id %} {% include comments.html %} {% endif %}
 
