--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,14 @@ layout: default
 ---
 <h1>{{ page.title }}{{ page.shortUrl }}</h1>
 <div class='separator'></div>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        processEscapes: true
+      }
+    });
+  </script>
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">{{ content }}</script> -->
         
