--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,9 @@ layout: default
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">{{ content }}</script> -->
         
+<!-- <div id="class"> -->
 {{ content }}
+<!-- </div> -->
 
 {% if site.disqus-id %} {% include comments.html %} {% endif %}
 
