--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -58,7 +58,7 @@
 .codehilite .vg { color: #008080 } /* Name.Variable.Global */
 .codehilite .vi { color: #008080 } /* Name.Variable.Instance */
 .codehilite .il { color: #009999 } /* Literal.Number.Integer.Long */
-a:link    {color:#000;}  /* unvisited link  */
-a:visited {color:#000;}  /* visited link    */
-a:hover   {color:#000;}  /* mouse over link */
-a:active  {color:#000;}  /* selected link   */ 
+.codehilite a:link    {color:#000;}  /* unvisited link  */
+.codehilite a:visited {color:#000;}  /* visited link    */
+.codehilite a:hover   {color:#000;}  /* mouse over link */
+.codehilite a:active  {color:#000;}  /* selected link   */ 
