--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -58,7 +58,7 @@
 .codehilite .vg { color: #008080 } /* Name.Variable.Global */
 .codehilite .vi { color: #008080 } /* Name.Variable.Instance */
 .codehilite .il { color: #009999 } /* Literal.Number.Integer.Long */
-.codehilite a:link    {color:#000;}  /* unvisited link  */
-.codehilite a:visited {color:#000;}  /* visited link    */
-.codehilite a:hover   {color:#000;}  /* mouse over link */
-.codehilite a:active  {color:#000;}  /* selected link   */ 
+.href a:link    {color:#000;}  /* unvisited link  */
+.href a:visited {color:#000;}  /* visited link    */
+.href a:hover   {color:#000;}  /* mouse over link */
+.href a:active  {color:#000;}  /* selected link   */ 
