--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,11 @@
     <h1><a href='{{ site.url }}/'>{{ site.name }}</a></h1>
 </header> -->
 <!-- <a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/about/'>About </a> | <a href='{{ site.url }}/contact/'> Contacts</a> | <a href='{{ site.url }}/archive/'> Archive</a>  -->
+<style>
+    a:link    {color:#000;text-decoration:none}  /* unvisited link  */
+    a:visited {color:#800;text-decoration:none}  /* visited link    */
+    a:hover   {color:#000;text-decoration:none}  /* mouse over link */
+    a:active  {color:#000;text-decoration:none}  /* selected link   */ 
+  </style>
 <a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/archive/'> Archive</a> | <a href='{{ site.url }}/about/'>About </a>
 <hr>
