edit site title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
         {% if page.title %}
             {{ page.title }}
         {% else %} 
-            {{ site.name }} &mdash; {{ site.description }}
+            {{ site.name }}
+            <!-- {{ site.name }} &mdash; {{ site.description }} -->
         {% endif %}
     </title>
 
