--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <!-- {{ site.name }} &mdash; {{ site.description }} -->
+    <link rel="icon" href="/assets/images/2d network mat mul algo.png">
     <title>
         {% if page.title %}
             {{ page.title }}
