--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,5 @@
     a:hover   {color:#000;text-decoration:none}  /* mouse over link */
     a:active  {color:#000;text-decoration:none}  /* selected link   */ 
   </style>
-<a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/archive/'> Archive</a> | <a href='{{ site.url }}/about/'>About </a>
+<a href='{{ site.url }}/'> Home </a> | <a href='{{ site.url }}/archive/'> Archive </a> | <a href='{{ site.url }}/about/'> About </a> | <a href='{{ site.url }}/other/'> Other </a>
 <hr>
